--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1, h2, h3 {
 }
 
 .column {
-    width: 100ch;
+    width: 50%;
     padding: 20px;
     background-color: #ddd;
     box-shadow: 0px 4px 10px black;
